--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -3629,6 +3629,10 @@ WOW WOW WOW
 
 
 
+经历爱，获得爱。
+
+
+
 152、3. 师门
 
 当然，是罗素先生先说了那句话，”To be without some of the things you want is an indispensable part of happiness”。 王小波当然也在他的很多文章里，不停地引用这句话来阐述他的幸福观。 7年间，曾经读过的《年代》三部曲，很多很多的话，都一遍遍在我的生活里回响，告诉我，“这样才是有趣”。
@@ -14133,7 +14137,59 @@ via 杜素娟老师公众号文章
 
 
 
-450、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
+450、- [那些王沥川教会我的事] https://mp.weixin.qq.com/s/VBWXUEcIH4LpRGC8KCXZ-w
+
+“尽管现实是这么悲惨，在故事里，我们还是要留给读者一点希望。”
+
+ —— 王沥川
+
+
+
+人活一辈子，其实不欠任何人的，不要让自己受委屈。
+
+
+
+因为，**沥川已经让她看到了看见更大的世界，同时看见了自己**。
+
+
+
+一个人的精神世界，一旦开始改变，从那个瞬间开始，就是**不可逆**的。
+
+
+
+**他让她成为了一个更好的人。**
+
+
+
+施大说，谢小秋和王沥川获得的这种幸福并不是战胜了罕见的恶疾、获得了医学的奇迹、赢得了美好的结局，**而是在你真诚付出的过程中，得到了幸福与爱情。**
+
+
+
+> **“爱是一种礼物，不是你能给，才表示你有。而是你给了，你就有了。”**
+
+
+
+这个故事不同于苦情剧的一味悲伤和纠结，却是用平静口吻和带有酸甜味的喜剧风格来表现的。施大解释说，他们赋予大多数人物很强的意志和行动力，**对自己想要的东西都表现出近乎偏执的坚持**，他们的个性和选择是推动情节发展的最大驱力。
+
+
+
+我觉得这才是“日日是好日“的意义。
+
+
+
+沥川说要善待手中剩下的光阴，不是我们等着痛苦散去，幸福来临。
+
+
+
+而是无论怎样的境遇，都**从容面对、从容争取**，在自己所处的水平发挥最大可能性，勤奋、庄严地对待自己和生活，并且把觉得有点辛苦的事情看成理所当然。
+
+
+
+这才是善待生活，善待自己。
+
+
+
+451、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
 
 我的小说的最后一页如下：
 
@@ -14163,7 +14219,7 @@ via 杜素娟老师公众号文章
 
 logging  
 
-202601091049 创作者YJH 完成终极版
+202601091508 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
