--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -14201,6 +14201,26 @@ via 杜素娟老师公众号文章
 
 
 
+452、- [北大哲学系教会了我什么?] https://mp.weixin.qq.com/s/TRGKhAYxc-eoL9Mymp9F3g
+
+所谓“智者养神，愚者养身”。
+
+世俗的名与利，不是不要，而是无论是否得到，都不要过于计较；
+
+红尘的痛与爱，不是无所谓，而是无论怎样的恩怨情仇，都要拿得起放得下。
+
+你以为你没有的，可能在来的路上；
+
+你以为她拥有的，可能在去的途中。
+
+每个人脚下都有路，不必和别人挤。
+
+
+
+经历爱，获得爱。
+
+
+
 终
 
 
@@ -14219,7 +14239,7 @@ via 杜素娟老师公众号文章
 
 logging  
 
-202601091508 创作者YJH 完成终极版
+202601091619 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
