--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -14201,7 +14201,13 @@ via 杜素娟老师公众号文章
 
 
 
-452、- [北大哲学系教会了我什么?] https://mp.weixin.qq.com/s/TRGKhAYxc-eoL9Mymp9F3g
+452、一厢情愿并不会使人很难过，使人难过的是明明一厢情愿，却还抱着两厢情愿的期待。一个人的暗恋就像会让人上瘾的罂粟，最怕自己抽离不出来。
+
+公众号 进化论 [愿天下有情人都是两厢情愿] https://mp.weixin.qq.com/s/EQarM-xzLJnWjMt-WfjHNg
+
+
+
+453、- [北大哲学系教会了我什么?] https://mp.weixin.qq.com/s/TRGKhAYxc-eoL9Mymp9F3g
 
 所谓“智者养神，愚者养身”。
 
@@ -14239,7 +14245,7 @@ via 杜素娟老师公众号文章
 
 logging  
 
-202601092032 创作者YJH 完成终极版
+202601102142 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
