--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -14271,7 +14271,77 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 
 
-456、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
+456、唐加文老师公众号文章- [只有你未曾爱过我] https://mp.weixin.qq.com/s/8vjWUWA6ltPAJrd43b-iIw
+
+文章摘要：以往的人们会为“你为什么不爱我”痛苦，现在的年轻人则像《情书》中的渡边博子那样，会说：谢谢你不曾爱过我，这样，我就可以过自己想过的生活。
+
+戴望舒式的“苦恋”，就是“我爱你，必须和你在一起”；岩井俊二式的“单恋”，则是“我爱你，和你无关”。
+
+在41岁生日那天，作家R收到了一封厚厚的信，是个陌生女人的笔迹，第一句就是：“你，从来也没有认识过我的你啊！”
+
+这是茨威格的小说《一个陌生女人的来信》的开头。小说描述了一个绝望的爱情故事：无名女子用整个一生来爱作家R，作家R却始终对她一无所知，不记得她少年时曾是他的邻居，不记得她就是与他共度三个晚上的少女；在她生了她的儿子、与他再续一夜情缘后，他的老仆人认出了她，但他还是认不出她，甚至往她的袖筒里塞钱——把她当成妓女了。在他面前，她卑微到了极点——“是我自己挤到你的跟前，扑到你的怀里，一头栽进我的命运之中”，“所有的人都娇纵我，宠爱我，大家对我都好——只有你，只有你把我忘得干干净净，只有你，只有你从来也没认出我！”
+
+本来她是可以成为他的缪斯的——就像贝阿特丽采之于但丁、劳拉之于彼特拉克。但爱情就是这样不公平，你倾尽所有心力去爱一个人，有时却得不到任何回报。用东方的说法，这叫“业”；用西方的说法，则叫“命运”（fate）。
+
+“被爱的人意识不到爱，如同一颗星星意识不到发现它的天文学家一样。”
+
+丹·布朗的最新小说《地狱》围绕着但丁的《神曲》展开情节，其中一个解谜的关键地点，就是被称为但丁教堂的佛罗伦萨圣玛格丽特教堂。据说9岁的但丁就是在这里第一次见到同龄的贝阿特丽采，对她一见钟情，并一辈子念念不忘。贝阿特丽采去世时年仅25岁，也葬在这座教堂里，所以这座教堂在后世成为单恋者的圣地。按照传统，人们在贝阿特丽采墓前祈祷，许愿尽早找到真爱，或者忘掉旧爱。
+
+在《新生》中，但丁描述了他初遇贝阿特丽采的震撼：“苦哉！苦哉！从此我将再不能安静了！”爱情从此成为主宰他灵魂的主人，但他一直不敢表白，只能远远地看着她，甚至为了掩盖自己的真实想法，故意装作喜欢上她的同伴。作家艾伯特·哈伯德在《爱情的肖像》一书中写道：“像但丁一样的爱情仍然普遍存在，并且会一直存在下去。单相思是永恒的，不受时间和地点的限制，从某种程度而言——让我们温柔地讲出这个事实，从此以后再不用窃窃私语了——所有善良的男人和女人在某个时间都会单相思，被爱的人意识不到爱，如同一颗星星意识不到发现它的天文学家一样。”
+
+也有人指出，但丁其实爱的并不是贝阿特丽采这个人，而是他自己塑造出来的贝阿特丽采的形象，他理想的爱情，其实是一种柏拉图式的精神之爱。贝阿特丽采之于他，已经成为一个符号，一个象征，是他的女神，他的创作之源；而所谓求之不得的爱情的痛苦，更多的是美学意义上的。
+
+但丁的后辈、意大利诗人彼特拉克对劳拉的爱情，也是如此。他在23岁那年邂逅已婚的劳拉，此后，他一直爱着她，从23岁到70岁，专心致志地给她写诗。劳拉嫁的是一个为她所尊敬但并不热爱的男人，生活无忧，彼特拉克的爱慕对她来说不是不可或缺的，而是一种愉快的消遣、美好的致意，没有的话也过得去，她不需要为所谓“爱情”背叛她的丈夫；如果她是个未婚少女，遭到父母的反对，她可能会不顾一切地跟随彼特拉克。
+
+所以后世的歌德在《亲和力》中得出这样的结论：伟大的柏拉图式的爱情在一种情况下是可能的，即女人嫁给了一个有耐性的男人，而男人娶了一个他无法摆脱掉的女人。“因此需要四个人来创造奇迹。”歌德自己也经历过一段柏拉图式的爱情，和夏绿蒂·冯·施泰因夫人交往12年的他，对此是有切身体会的。
+
+对他而言是苦恋，对她而言却可能是一个无中生有的爱情故事。
+
+饱受爱情痛苦的诗人不少，但像戴望舒那样自称“可怜的单恋者”，就显得分外有悲情色彩。在苦恋施绛年（作家施蛰存之妹）8年不果后，他写了一首《单恋者》：“在烦倦的时候，/我常是暗黑的街头的踯躅者，/我走遍了嚣嚷的酒场，/我不想回去，好像在寻找什么，/飘来一丝媚眼或是塞满一耳腻语，/那是常有的事。/但是我会低声说：/‘不是你！’然后踉跄地走向他处。”
+
+1928年，也就是戴望舒认识施绛年那一年，他写了《雨巷》。那个“丁香般的姑娘”，很多人猜测就是施绛年。戴望舒的长女戴咏素曾说：“我表姐认为，施绛年是‘丁香姑娘’的原型。施绛年虽然比不上我妈（即穆丽娟，作家穆时英之妹）以及爸爸的第二任太太杨静美貌，但是个子很高，与爸爸一米八几的大高个很相配，气质与《雨巷》里那个幽怨的女孩儿相似。”
+
+戴望舒痴恋施绛年，不惜以跳楼自杀表明心意，施绛年被逼无奈勉强答应，但条件是他必须出国拿个学位回来。几年后，远在法国留学的戴望舒听说了施绛年和一个冰箱推销员的绯闻，立刻赶回国跟施绛年摊牌，希望她能回心转意。但施绛年执意离去，戴望舒8年苦恋还是落空。此事给他后来的婚姻埋下了不安定的因子，跟穆丽娟结婚不久，两人就零交流了。穆丽娟到了晚年，仍然对此耿耿于怀，1994年她接受传记作家王文彬采访时，说起他们的婚姻：“我们从来不吵架，很少谈谈，他是他，我是我。……他对我没有什么感情，他的感情给施绛年去了。”
+
+沈从文开始追求张兆和时，也是单恋。张兆和抱着沈从文给她写的一大堆情书去找时任中国公学校长的胡适，表示自己不堪其扰。胡适劝解说，他非常顽固地爱你。张兆和马上回了一句：我很顽固地不爱他。事后胡适写信安慰沈从文：“我的观察是，这个女子不能了解你，更不能了解你的爱，你用错情了……你千万要挣扎，不要让一个小女子夸口说她曾碎了沈从文的心。”
+
+所幸的是，沈从文不顾一切的爱最后感动了张兆和。不过卞之琳就没有那么幸运了。他苦追张充和（张兆和之妹），走的是家人路线，希望张家人为他说好话，也下跪求过婚。但人人知道他喜欢张充和，张充和对他却没有意思。他自己也预感到无望，不会开花结果，但就是放不下，甚至在张充和1948年和傅汉思结婚后赴美定居后，他还不死心。多年之后，作家苏炜为编写《天涯晚笛》访问年已九旬的张充和，问起这桩著名的苦恋故事，张充和这样回答：“这可以说是一个‘无中生有的爱情故事’，说‘苦恋’都有点勉强。我完全没有跟他恋过，所以也谈不上苦和不苦。”
+
+谢谢你不曾爱过我，这样，我就可以过自己想过的生活。
+
+岩井俊二执导的电影《情书》，主题其实是单恋：男藤井树单恋女藤井树，秋叶则单恋渡边博子。岩井俊二在一次访谈中坦承，女藤井树也是单恋，渡边博子某种程度上也算是单恋（因为男藤井树内心爱的不是她？）。
+
+岩井俊二似乎偏爱单恋的故事，像《花与爱丽丝》、《四月物语》，都是。因为“难以得到的爱情更吸引人，会有故事。而公园里搂搂抱抱的男女反而让人觉得没兴趣”。戴望舒式的“苦恋”，就是“我爱你，必须和你在一起”；岩井俊二式的“单恋”，则是“我爱你，和你无关”。而发展到如今这个网络时代，日本年轻人连恋爱都不感兴趣了。不要婚姻、家庭，乃至性爱，日本媒体早就注意到这一现象，将之命名为“无性症候群”。作家新井一二三也说，现在的日本年轻人不分男女都以“草食系”为主，对恋爱、性爱不感兴趣，宁愿宅在家里和妈妈、姐姐吃甜品。那么，爸爸干什么呢？曾经以校服少女为最大卖点的日本周刊杂志，转做“中高年性爱”专题，吸引的就是被孤立的爸爸们。
+
+因为年轻人觉得投入一段爱情关系太麻烦了。就像日剧《电车男》中，宅男主人公和“爱马仕小姐”约会，出了状况，他第一时间想到的是上网向网友求救，而不是和就坐在自己对面的“爱马仕小姐”沟通。“你可以看一看，周围到处都是吸引人的东西，为什么你一定要陷入男女关系这么麻烦又繁琐的事情呢？如果乐意的话，你可以交一个虚拟女朋友，那种虚拟的经历甚至可能比真实世界的感情还要棒。在日本，有相当一部分男人就是这么想的。随着科技的进步以及色情产业的发展，他们宁愿用另外的方式去感受异性，而不是去尝试复杂的男女关系。”生活在日本的文化评论家罗兰·凯特这样分析道。
+
+以往的人们会为“你为什么不爱我”痛苦，现在的年轻人则像《情书》中的渡边博子那样，会说：谢谢你不曾爱过我，这样，我就可以过自己想过的生活。
+
+ 
+
+
+
+　※如喜欢，请分享！
+
+  点击右上角“…”或者人像按钮
+
+　1、关注阳光雅苑：选择“查看公众帐号”或“查看官方账号”，选择“关注”即可；
+
+　2、发送给朋友；
+
+　3、分享到朋友圈或者腾讯微博；
+
+　4、收藏本条资讯或者原创内容；
+
+　5、将本条资讯或者研究资讯内容以邮件形式发送给朋友。
+
+　6、直接通过微信“添加好友”，选择“搜索公众账号”，查找“Sunny10179”或者“阳光雅苑”。然后，点击关注！
+
+
+
+
+
+457、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
 
 我的小说的最后一页如下：
 
@@ -14301,7 +14371,7 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 logging  
 
-202601111627 创作者YJH 完成终极版
+202601122053 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
