--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -14341,7 +14341,40 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 
 
-457、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
+457、- [杨德昌的生活哲学电影《一一》：想得却不可得，你奈人生何（一一）影评] https://movie.douban.com/review/9023314/
+
+
+多久不曾放下的人，那就不放下吧。记忆就存在在哪里，何必要追。
+
+我记得简南俊带着日本客户大田去听音乐，在返程的车里，简南俊跟对方倾诉自己为何喜欢音乐，他说，他因为初恋情人才喜欢上听音乐。“She left,but the music leaves”.她走了，但音乐留下了。
+
+
+音乐承载了他的回忆与爱，成为简南俊生命中不可消失的旋律，更多的是那些特定的音符代表了对一个人的追忆与怀念。
+
+
+多少时刻，在音乐响起的时候，记忆里的人若隐若现地出现在我们面前，想看得再近些，发现对方早已走远了，时隔多年，当你某天清晨醒来时，愈发地想寻找脑海中对方的面庞，却发现模糊不清。
+
+电影中探讨了常见的人际关系，初恋，前任，夫妻，同事，朋友，同时一个个人物也在鲜活给观者展现了人在不同成长阶段的经历：童年，少年，青年，中年，老年。
+
+喜欢拿着相机，与老师斗智斗勇，对一切事物都充满好奇，带有疑问号的洋洋，或许是童年的我们。
+
+……
+
+时光走着，走到人生中场，你是会成为像敏敏一样觉得每天都是一样枯燥无味的中年人，还是会保持像大田一样欣喜地将每一天当做新的一天来度过的人呢？
+
+版权归作者所有，任何形式转载请联系作者。
+作者：芝士水饺专卖店（来自豆瓣）
+来源：https://movie.douban.com/review/9023314/
+
+
+
+458、蔡澜：痛苦的本质与解脱
+
+什么叫做痛苦？女朋友走掉你很痛苦吗？不是你是你想出来的？真正痛苦是怎么样？人家拿了一刀把你捅一下，这痛的要死，那么你痛的时候怎么办？拼命吃止痛丸就止痛了吧，因为这个是肉体上的痛，肉体上的痛，医药可以解决；心灵上的痛，你不想它就没了，我年轻的时候。也被女人骗光所有钱。一整晚痛哭流涕，但是第二天我还是要去干力工赚钱。因为我要养弟弟上学，不能没有钱，然后我发现我的痛苦其实并不是因为谁离开了，或者我失去了什么。而是我一直抓着不放，是我的执念，我越不允许发生什么。什么就越会让我痛苦，这个就是我执，所以我呢。我有很多烦恼，我有很多痛苦。那么怎么办，我就把我的痛苦放在一个保险箱里面。把它锁起来，用几个铁链再跟它捆绑，捆绑了以后搬到大海，当一脚把它踢下去，让这些痛苦永沉大海，你都不想它了，就没了，没了，所有的苦都来自于我执；而所有的幸福来自于哪里，来自于我允许。所以最大的智慧就是我允许。当我什么都允许的时候，便没有了痛苦。
+
+
+
+459、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
 
 我的小说的最后一页如下：
 
@@ -14371,7 +14404,7 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 logging  
 
-202601122053 创作者YJH 完成终极版
+202601131950 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
