--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -14374,7 +14374,93 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 
 
-459、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
+459、- [人生在世，挣扎然后离开，意义是什么？] https://mp.weixin.qq.com/s/7OvPOd8KJ8ntfuX7K9bM6Q
+
+如果人没有注意到这个残酷的事实，他活得肯定不够清醒，不够明白。
+
+人生在“永恒的头脑”看来，就是一场“当局者迷”的荒诞剧。然而，“旁观者清”啊。
+
+人们在台上很投入地扮演着悲欢离合的角色，悲壮激烈，他们不愿相信，在“永恒的头脑”看来，那不过是一个笑话而已，他们绝不愿相信。
+
+这就是人的愚蠢之处。每个不愿正视这件事的人都是在自欺欺人。
+
+
+
+人活一世，都想留痕迹。
+
+有人说，人最大的目标是青史留名；有人说，即使不能流芳千古，能够遗臭万年也是好的。说这话的人没有想到：在地球热寂之后，什么痕迹都不会留下。
+
+记得在我发表了第一篇文章时，曾在日记中写道：我已经留下了第一个痕迹。
+
+当时的我没有想到，这个痕迹就像沙滩上的脚印，很快就会被海浪抚平。
+
+
+
+世界上没有一个人能够在宇宙中留痕迹，这是毋庸置疑的。
+
+亿万年后，没有人会记得马克思是什么人，别人就更不必说了。
+
+正如哲人所说：“人生的目的是什么？在我看来是不难解答的。人生的目的不过是死亡而已，因为在这世界里生存的一切都是像尘土一样地被时间的气息渐渐吹走……就像在沙漠中脚迹一下子就会被吹没了那样，时间也会抹掉我们存在的痕迹，仿佛我们的脚就从来没有踏过大地似的。”
+
+既然如此，人活着岂不和死没什么区别？是这样的。这就是我对生活最终的看法。
+
+
+
+当你把这个痛苦的事实当作不得不接受的事实接受下来之后，你就会真正地冷静下来，内心会真正地平静下来。
+
+你会用一种俯视的、游戏的态度来看人生。
+
+在想透了生活的无意义之后，就要“死马当活马医”了。
+
+尽管我们知道生活最终没有任何意义，尽管我们知道人死之后最终不会留下任何痕迹，我们还是可以在我们生存于世的这几十年间享受生存的快乐。
+
+尽管生命本身是没有意义的，但有些事对生命是有意义的：
+肉体和精神的痛苦对生命有反面的意义；
+而肉体与精神的快乐对生命有正面的意义。
+
+这就是我心目中舒适与幸福在人的生命中的位置。
+
+……
+
+禅揭示了生活的无目的，无意义；它提到要追求活生生的生命，生命的感觉。
+
+其实，生命的意义仅在于它自身，与其他一切事和人都毫不相关。
+
+参禅时，我想到，过去我常常受到世间虚名浮利的诱惑，其实是没有参透。然而，我又不愿意在参透之后使生命的感觉变得麻木。
+而是循着快乐原则，让生命感到舒适 (没有病痛，基本生理需要得到满足) 和充实 (精神和肉体的enjoyment)。它包括对好的音乐、美术、戏剧、文学的享用。更重要的是把自己的生活变成一个艺术品，让自己的生命活在快乐之中，其他的一切都不必追求和计较。
+
+美好的生活应当成为生存的目的，它才是最值得追求的。
+
+福柯说：“令我震惊的一个事实是，在我们的社会中，艺术已经变成仅仅与对象而不是同个人或生活有关的东西了。艺术成了一门专业，他们由艺术家这样的专家做出来。但是，难道每个人的生活不能成为艺术作品吗？为什么一盏灯或一座房子可以成为艺术品，我们的生活却不能成为艺术品呢？”
+
+毛姆也曾说过：“我认为，要把我们所生活的这个世界看成不是令人厌恶的，唯一使我们能做到这一点的就是美，而美是人们从一片混沌中创造出来的。例如，人们创作的绘画，谱写的乐章，写出的作品以及他们所过的生活本身。在所有这一切中，最富有灵感的是美好的生活，这是艺术杰作。”
+
+
+
+[答案不可能在书中找到，只有自己去走] https://mp.weixin.qq.com/s/LQZJkNVngRZiV3eBTRcP5w
+
+《人性的枷锁》by 毛姆
+自己的答案不可能在书中找到，只有自己去走。有时候是走了很远了，才发现当初的想法通通是错误的，却发现自己仍然走在那条既定的路上。人生大概也算是个奇妙的旅程吧。
+他不懂得在人生的旅途上，非得越过一大片干旱贫瘠、地形险恶的荒野，才能跨入活生生的现实世界。
+一个人仿佛是包得紧紧的蓓蕾。一个人所读的书或做的事，多数情况下对他毫无作用。然而，有些事情对一个人来说具有一种特殊意义，这些事情使得蓓蕾绽开一片花瓣，花瓣一片片接连开放，最后便开成一朵鲜花。
+他不懂得在人生的旅途上，非得越过一大片干旱贫瘠、地形险恶的荒野，才能跨入活生生的现实世界。
+所谓“青春多幸福”的说法，不过是青春已逝的人们的一种幻觉；而年轻人知道自己是不幸的，因为他们充满了不切实际的幻想，全是从外部灌输到他们头脑里去的，每当他们同实际接触时，他们总是碰得头破血流。
+年轻人得靠自己去发现：过去念到过的书，过去听到过的话，全是谎言，谎言，谎言；而且每一次的发现，又无疑是往那具已被钉在生活十字架上的身躯再打入一颗钉子。
+生活中就有这样的事：你接连数月每天都碰到一个人，于是你同他的关系便十分亲密起来，你当时甚至会想没有了这个人还不知怎么生活呢。随后两人分离了，但一切仍按先前的格局进行着。你原先认为一刻也离不开的伙伴，此时却可有可无，日复一日，久而久之，你甚至连想都不想他了。
+他自由了，可是以前一直翘首期待的那种欣喜若狂的激情如今却不知去向……他怅然地问自己：这是不是人之常情呢？好不容易达到了目的，事后反倒希望自己功败垂成！
+一个人想要体会到生活中的浪漫情调就必须在某种程度上是个演员，而想要跳出自身之外，则必须能够对自己的行动抱着一种既超然物外又沉浸于其中的乐趣。
+他很危险，因为他欺骗自己，达到了真心诚意的地步。
+他的一生总是受他认为应该做的事情，而不是受他真心想做的事情所左右。……他老是生活在对未来的憧憬里，却接二连三地坐失眼前的良机。他的理想是什么呢？
+
+……
+
+
+
+460、《走出非洲》的结局，是凯伦·布里克森失去了一切，却又在失去中获得了自由。 她失去了心爱的农场、挚爱的情人丹尼斯，甚至非洲这片土地，但最终带着对这片土地和人民的深刻记忆与爱，回到了欧洲。 这个结局告诉我们，有些地方、有些人，一旦走进心里，就永远不会真正离开。
+
+
+
+461、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
 
 我的小说的最后一页如下：
 
@@ -14404,7 +14490,7 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 logging  
 
-202601131950 创作者YJH 完成终极版
+202601142142 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
