--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -14460,7 +14460,145 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 
 
-461、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
+461、- [（转）等死你--陈轩] https://www.douban.com/group/topic/32761431/?_i=8557657OOvh5CH
+
+# （转）等死你--陈轩 
+
+下午从院办回来，看到桌上的信，当时就像被一把重锤狠狠敲了一下，紧张地手都哆嗦了。我一个星期一个星期地写，你丫是一个月一个月地回。       
+
+拿着信摩挲半天，始终不能撕开。一边是不知道你是什么反应，一边是感觉这么薄薄的一封信，三下五除二就看完了，我下面一个月（可能是我过于乐观了，也许是下面一年，或者这辈子）怎么熬呢？所以我拉屎时揣着信，吃晚饭时揣着信，到了晚上上选修课，终于受不了煎熬了，拆之。       
+
+阅毕一点反应也没有。我觉得我应该难过一点，伤心一点，做悲痛状，做凄惨状，要是再挤出点眼泪，滴在信封上，那效果就更加理想了。但是没有。其实有什么好难过的呢，不就是和原来一样吗？不就是保持原状吗？人要是为保持原状哭泣，那这个世界上有几个人能笑着呢？      
+
+再说，被你拒绝又不是一次两次了，习惯了。我发现很奇怪，隔一年你拒绝我一次，隔一年你拒绝我一次。年年岁岁花各异，岁岁年年人相同。我喜欢这种总是在同一个人身上失恋的感觉。爽。就像时间未曾逝去一样。就像岁月还是那般年轻一样。      
+
+哥们都发短信劝我挺住。我觉得好笑：我要是这点都挺不住，那我三年来早崩溃了。       
+
+你说，没有用的。是的，也许是没有用的，但是这并不能让我放弃。难道你没听过“知其不可而为之”这句话吗？我等，并不是，或者不全是因为我想怎样。我等，是因为我认为等待是有价值的，难道因为你拒绝我就不等吗？      
+
+也许有一天我会放弃，但是我绝不会像那些自以为看透了的犬儒主义者那样，等到将来自己的儿子面临这种类似的境遇的时候，傻逼哄哄地嘲讽他们，说一些“别犯傻了，爱情这东西，就是……”之类的屁话。我会对他说，儿子，老爸当年也等过，但是老爸比较没种，没有坚持到底，就向这个急躁的世界缴械投降了。希望你比老爸有出息。去吧，坚持你自己的内心，老爸支持你。      
+
+满打满算才三年，人生长着呢。有了又怎样，有了可以再换，好了可以再散，结婚的还能离婚呢。我急什么，我不急，我一点都不急。你从现在开始，这辈子别做别的了，专门等着收我的信吧。         
+
+我就等，我偏等，等死你。
+
+
+
+# 别向这个操蛋的世界投降
+
+公众号 三家村夜话；2013年7月16日 23:07
+
+  我妈常常喜欢念叨：人家又不喜欢你，你干嘛还要去喜欢人家。以前我一直想不出什么话反驳，只好简单粗暴地回应：一边去，你一女人家懂什么。
+
+  我见过很多人，换男女朋友比换内裤还勤快的那种自不必说，还有像我们宿舍的闷骚青年，追女生，人家不睬他，他郁闷一阵子，提枪掉马就直奔下一目标而去了。我在旁边看的目瞪口呆。你要问他，他保准振振有词：人家又不屌我，我喜欢她有什么用。是的，有什么用。然后还会反过头来劝我：没用的，我跟你说……这仿佛是如此的天经地义，如此的不证自明。
+
+  昨天，我仔细地想了想，终于想通了这个问题。其中的关键就在于，你究竟是喜欢一个人本身，还是喜欢一种预期，一种前景，喜欢一种对方和你上床睡觉结婚生子的可能性？
+
+  这个年龄很多人都急吼吼地寻找另一半抱团取暖。要我说，其中有多少是真的喜欢对方本身，这很难说。我这么说可能一来打击面太广，二来没有调查取证，所以显得不那么令人信服。其实这很好判断，那就是扪心自问：换一个人行不行？
+
+  这样多少有点神经质。对大多数人来说，并不存在一个绝对不可替代的the one。否则的话，这个世界会麻烦许多。小的时候，小到我才第一次思考爱情这回事的时候，我就对一个问题百思不得其解：你喜欢一个人，而这个人在茫茫人海中又恰巧喜欢你，这是多么大的一个巧合啊！而幼小的我放眼望去，这个世界上充斥着不可胜数的一对对巧合。
+
+  要解释这样一件事，只能说明，在大多数人眼里，另一半绝不是不可替代的。而每一个个体的特质，很大程度上是相异的。换句话说，要追溯这种可替代性的载体，那可能就是每个个体作为伴侣所能为对方提供的“服务”了。
+
+  比如说，深夜陪你聊天，闲暇陪你娱乐，工作学习相互鼓励，人情冷暖相互慰藉，生理需要相互解决。然后买房结婚，构筑家庭，生儿育女，传宗接代。老了之后相互扶持，终了一生。这些都只是伴侣给你带来的效用而已。这个过程中，肯定会产生感情，不过这个感情的基础来自于这些过程当中一点一滴的积累，而不是来自于对方本身。换句话说，换一个人，你照样可以和他/她积累起深厚的感情。而关键就看谁最开始和你开启这段旅程。
+
+  所以，少不更事的时候，我们总以为只有某个特定的对象才能给我们带来这一切，只有他们才能给我们幸福感。而后长大了我们知道并不是这么回事。“好女人多的是的，何必呢？”我无数次地听见这句话。这就是所谓的成熟吧。
+
+  这一切，也很美好。但这不是我想象中的爱情。
+
+  就像我那个倔强的困惑，如果不存在将就凑合的心理考量，如果每个人都是固执的完美主义者，那么怎么可能你喜欢的人也正好喜欢你呢？但是，一旦喜欢，那便是雷打不动的定格。爱情所投射的对象本身基本不会产生多少重大的变化，除非她人品突变，性格突变，样貌突变，而这一切绝对是小概率事件。爱情对象在那，那么爱情本身便随之恒定。她不喜欢我，那么我也就不喜欢她了，这作何道理？我喜欢的是她这个人，而不是“她可能喜欢我”，“我们可以像情侣一样生活”这种期盼。
+
+  所以真正着眼于对象本身的爱情——我不敢说这是真正的爱情，但这是我理解的爱情——是这样的：她不认识我，我会喜欢她；我们点头相交，我会喜欢她；她拒绝我，我会喜欢她；她反复拒绝我，我还是喜欢她；她不回我信，不听我电话，不回我短信，我还是喜欢她；她和别的男人谈恋爱，我还是喜欢她；他和别的男人上床，我还是喜欢她；她和别的男人结婚，我还是喜欢她；她死了，我还是喜欢她。
+
+  因为我喜欢的是她本人，她本人不变，感情就不会也没有理由变。这一切都不会随着她对我的态度，她自身的选择而变化。
+
+  但是，这有什么用呢？
+
+  “我想学哲学，我想学艺术。”
+
+  ——“学这些有什么用呢，能当饭吃吗？”
+
+  “我就是喜欢她。”
+
+  ——“她又不喜欢你，有什么用呢？”
+
+  “这个社会为什么这么不公平？”
+
+  ——“这个社会就这样，你说这些又有什么用呢？”
+
+  是的，有什么用呢。我们每当面临内心召唤的时候，这个问句都会鬼魅般如影随形。有时甚至不用父母亲友耳提面命，我们自己就习惯性地自问自责：有什么用呢？有什么用呢？
+
+  那要是追问到底，我们生于世间，百年来往，又有什么用呢？
+
+  如果生命是有意义的，那么我们内心的召唤就是有意义的。午夜梦回想到她时那满心酸楚难言的悸动，铺开信纸秉笔夜书时那字斟句酌的计较，经年再见面对佳人时那喷薄欲出的情意，这一切都是爱情原本的意义所在，这一切都是生命本身赋予的。
+
+  这有什么用呢？这本身就是最大的意义。
+
+  我们年轻时那些美丽的梦，它们往往敌不过这坚硬的世界，我们要将就，我们要放弃，我们要隐忍。比如爱情，谁年少时没有些洁白的向往。但我们敌不过现实的无奈，父母的唠叨，亲朋的压力，甚至敌不过我们自己本身内心的虚弱和不耐烦。然后我们就将其掩埋，扭头它寻，只有等到回首前尘时才泪满衣襟。
+
+  我知道，很多人笑我幼稚。就连身边很好的朋友也常常对我说：“我保证，XX年之后你就不这样想了。”当然了，他们一再看着我过了XX年，还是一如既往地这么幼稚。这算幼稚吗？我只是觉得大家的理解不同罢了。
+
+  当然，我并不是说我不会放弃。就像我08年在《等死你》当中写的：“也许有一天我会放弃，但是我绝不会像那些自以为看透了的人那样，等到将来自己的儿孙后辈面临这种类似的境遇的时候，傻逼哄哄地嘲讽他们，说一些“别犯傻了，爱情这东西，就是……”之类的屁话。我会对他说：“儿子，老爸当年也等过，但是老爸比较没种，没有坚持到底，就向这个急躁的世界缴械投降了。希望你比老爸有出息。去吧，坚持你自己的内心，老爸支持你。”
+
+  是的，虽然自知终须一败，但请再多坚持一会，别向这个操蛋的世界投降。
+
+文/陈轩
+
+
+
+本期编辑：人参和醋不相逢
+
+
+
+**--------- 偶失万户侯 遂老三家村** ---------
+
+> ☆ 要分享，只给您最亲最近的人
+>
+> ☆ 回看第XX期，输入 XX 即可
+>
+> ☆ 输入 H ，查看帮助和说明
+>
+> ✌  三家村夜话 ：sanjiacunyehua
+
+
+
+462、附：孙燕姿歌曲《我也很想他》MV开头的台词
+每个人心中
+都有一段与生命同在的青春爱恋
+难以抹灭
+而思念至深时
+我们将不自觉活在世界的中心
+呼喊一段逝去的爱恋
+想念一个我们曾经深爱的人
+终于明白
+你和她之间
+是一生的记忆
+
+孙燕姿歌曲《我也很想他》是日本电影《在世界的中心呼唤爱》的中文主题曲
+
+
+
+463、相忘于江湖，不如相濡以沫。
+
+- [南极之恋 (豆瓣)] https://movie.douban.com/subject/26628329/
+
+
+
+464、《精神与爱欲》
+
+★“真正伟大的情感超越性别”
+
+★《纽约时报书评》将本书描述为“无限广阔”
+
+★《柯克斯书评》则称其为“我们这个时代出版的最深刻和最具魔力的小说之一”
+
+★一条理智与情感统一的圆融之道——延续黑塞作品中不变的主题：探寻自我
+
+- [精神与爱欲 纳尔齐斯与歌尔德蒙 (豆瓣)] https://book.douban.com/subject/37309767/
+
+
+
+465、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
 
 我的小说的最后一页如下：
 
@@ -14469,6 +14607,18 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 瑜（我的藏书印 西泠印泥）
 
 爱如清流，永恒不变。
+
+
+
+466、- [完美的日子 (豆瓣)] https://movie.douban.com/subject/35902857/
+
+相信“在这世界上，没有事情是不会改变的”。
+
+像 Komorebi 一样， 让生命在当下发生。
+
+
+
+467、相濡以沫，不如相忘于江湖。——庄子
 
 
 
@@ -14490,7 +14640,7 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 logging  
 
-202601142142 创作者YJH 完成终极版
+202601161815 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
