--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -14632,7 +14632,15 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 
 
-470、相濡以沫，不如相忘于江湖。——庄子
+470、正如有人说，当你什么都不想要的时候，你就拥有了一切。
+
+
+
+471、via 微信视频号 叶檀聊人生 不必害怕，不必恐惧，我们失去的本来就不属于我们，我们只有打开自己，我们不害怕失去，我们才能得到这一生。最多的，最纯粹的幸福！
+
+
+
+472、相濡以沫，不如相忘于江湖。——庄子
 
 
 
@@ -14654,7 +14662,7 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 logging  
 
-202601182017 创作者YJH 完成终极版
+202601211620 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
