--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -14660,7 +14660,38 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 
 
-473、相濡以沫，不如相忘于江湖。——庄子
+473、- [怎么样忘掉一个人？] https://mp.weixin.qq.com/s/uL-anx1NViHAjP7C_02k0A
+
+投稿 来自匿名同学
+
+怎么样忘掉一个人？
+
+
+
+答复 来自兼职咨询师  宗涵
+
+看到“如何忘掉一个人”时， 小清心仿佛能看到屏幕背后那个有些疲惫、却依然在向前走的你。
+
+那些深夜翻涌的思绪和为何还没放下的自责，都成为脚下的重量，这恰恰证明你曾真诚投入，而真诚的心，本就难以轻松转身，遗忘并不遵循意志。
+
+
+心理学中的“白熊效应”表明，越是压抑回忆，记忆反而越清晰。我们可以做的是为自己建立安全的心理空间，允许情绪随时间自然流动。
+
+可以尝试下面的方法：
+
+为回忆划定时间。每天允许自己十分钟安放那些思绪，时间到了，告诉自己：“今天，我们就陪它到这里。”
+
+让身体接触新体验。情绪常储存在身体中，试着用全新的感官体验来松动记忆的痕迹。跳一段陌生的舞，骑行一条未曾走过的路，甚至只是更换沐浴露的香味。
+
+以书写转换视角，尝试用第三人称写下过往。“从前，有一个人……”当“我”变成“她”或“他”，你会悄然获得一种温和的疏离，并看见这段经历里你一步步如何坚韧地走到了今天。
+
+真正的释怀，是当往事浮现时，你能像翻阅旧相册，记得画面，却不再被它牵动呼吸。
+
+小清心这里永远有一个安静的位置，愿意陪你整理然后轻轻走向属于你的明天。
+
+
+
+474、相濡以沫，不如相忘于江湖。——庄子
 
 
 
@@ -14682,7 +14713,7 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 logging  
 
-202601221227 创作者YJH 完成终极版版
+202601232002 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
