--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -14801,7 +14801,78 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 
 
-480、最好的活法就是完全的放松，坦然的独处。尽情的享受生活，不在意别人对你的任何评价，不纠结命运让你处于怎样的境遇里。顺其自然，随遇而安，自得其乐，一生无悔。千万记住过劳则死，过慧则天收。困了就睡，饿了就吃，没苦就别自找苦吃，能吃苦，不是说人品就高尚，享受生活也不代表是浪费时间，脑子灵不灵活没关系。手里有没有钱也无所谓。人从出生到离开这个世界，这一路的经历是用来感受的，不是用来向别人证明自己。——蔡志忠老师
+480、最好的活法
+
+
+
+#《缘与命 但盼人生一盘好棋》  王邦雄著
+
+人生在世，有两大关卡，是很难通过又不得不通过的，一是我们存在的形躯，一是我们过活的人间世。人的真实生命，总是落在我们存在的形躯去展开人生的行程，然而我们存在的形躯却是有限的，这是人生悲剧性的开始。来自形躯的限定：一是会病痛会老死，不管人生多美好，总有一天我们会割舍一切而去；二是会疲累会伤感，不论是谁面对人生，总有承担不了的时候；三是性向才情天生不平等，各显精彩，也各有局限。所以人的情意理想，总不能有充尽的实现；失意与挫折几平不可免地环绕在我们生命的周遭。
+
+我们的精神主体，不仅受制于形躯的限定，还得投入人间世的错综复杂中，去碰触闯荡。人间世是人与人之间所构成的关系世界，人的气质才性，本来就各有遮蔽而互成障隔，加上人生遭遇的曲折迷离，更是互相牵制而彼此抵消。不仅看不到别人的好，甚至执着自己的好，作为压迫别人的利器，如是人间的真实美好，也就散落飘零，难成正果了。
+
+依据庄子的生命价值观，天生而有的形躯自然是“命”，人为造作的人间是非是“义”。人来到人间的第一个身份是为人子女，且无不深爱自己的父母亲，这是天经地义，是“不可解于心”的真情实感，所以说：“子之爱亲，命也。”解不开也不必解，所谓的人生行程就由与生俱来的“命”去展开。再说，没有人不在人间世过活，不管你置身何处，总有维系人间秩序的权力制度，这是“无所逃于天地之间”的束缚，虽无可奈何也只得去面对去承受，所以说：“臣之事君，义也。”逃不掉也就不用逃，人生的可能性就从人际关系网的“义”去寻求。尽管形躯天生有“命”，性向才情有限定，然人为造作的“义”，自困自苦的扰劳累，是可以通过虛静无心的精神涵养去化解。避开不相干的缘会碰触，而回归天生本有的命限自然，尽管病痛老死依旧，只要不疲累、不伤感，从人间世的牵引纠结中超拔出来，也就可以做个“其寝不梦，其觉无忧”的真人了。
+
+从天生的“命”来说，要认同自己的性向才情，或许我的形躯并不高明，但这是我惟一可能的起点，舍此而外，我再无其他。不管何等身材与何种体能，自有我们可以奥藏玄同的自然天地，也不论何等才情与何种性向，自有我们可以神用妙运的人文世界。我知道我在什么地方，我明白我可能的世界在哪里，割舍在我生命之外的世界，我才能凝聚专一，由至虚而至一，去开创属于我自己的天地，存全属于我自己的人生。也就是说，知“命”的人才有善“缘”，找到了生命的停靠，人生才不会一如无根的浮萍，随风飘荡，在天涯漂泊了。
+
+《缘与命》一文诠释儒家的价值观点，“缘与命之外”则豁显道家的生命智慧，儒家肯定人生行程的方向分位，道家化解生命存在的执著困苦。这是人生的两面相，儒家要我们认真地“过”，”，道家要我们达观地“忘”，我们一方面在《缘与命》之中，一方面在“缘与命”之外，在缘与命之中，所以我们要去投入去担当，在缘与命之外，所以我们要去通过去化解。两者的会通结合，才是人生的真相，才是处世的妙谛。
+
+
+
+
+
+#《缘与命 但盼人生一盘好棋》  王邦雄著
+
+#什么事都可有可无，什么人都好聚好散，人生成败的论定，不在于何时投人，而在于何时退出。懂得急流勇退，永远是人生最重大的智慧。
+
+何时了结的迷惘
+
+人生的旅程，在时间之流中转折推进，有开始就有结束。问题是，什么时候放开了结，才是最恰当而适切？
+人间事多的是轰轰烈烈的开展，能干干净净收场的，却少之又少。以是之故，讣闻上的“寿终正寝”，也成了赞颂之辞了。
+
+……
+
+老师逼问学生，父母教训子女，总要有个限度，否则，说教责善不成，反带来反效果。夫妇论是非，男女谈恋爱，总要适可而止，不伤感情，若求全之心太过，没有为对方留下余地，那就挽回无计了。
+红颜总成白头，青春年少不再，人间还有什么放不开的？终其极，不都是黄土一抔么？那时候，什么不都放下来了。青春、爱情、权势，生未带来，死难带去，何苦恶形恶状，痴痴迷迷呢？在成长过程中，我们要学习如何去面对与承受一切来自生命的损伤与失落。
+
+即以戒烟而论，太多的人已不知自己到底戒几百次了。此虽戏言，不也透露某些讯息么？青少年不必用心，在偶然机遇里就可以学会抽烟；而断然戒绝，就是成年人也斩绝难断。打牌散心，说是卫生麻将，养兰怡情，说是田园乐事；然而打牌人迷，散心不成，就不太卫生了；养兰成痴，怡情不得，就非乐事一桩了。在人间热衷名利，远走田园又喜好花鸟，一样执着，哪能无牵无挂？
+演连续剧演得下不了台，挨到大家都厌弃不观，才草草收场；该告老而不告老，该息影而不息影，甚至退而不休，息影再复出，把原有的形象破坏了，残留在观众身上的
+
+好感敬意，也就荡然无存。该分手而不分手，该道别而不道别，到最后彼此不能说话，可真是余味已尽，相见也难了。
+人生的旅程，在时间之流中，来去匆匆，有开始总有结束，还有什么好痴迷强求的？什么事都可有可无，什么人都好聚好散，人生成败的论定，不在于何时投人，而在于何时退出。懂得急流勇退，永远是人生最重大的智慧。
+
+
+
+- [王强老师：读一流的书，做一流的人] https://mp.weixin.qq.com/s/4xxe-vsInPJfuUq_b147YA
+
+  - [活动回顾 | 一份普鲁斯特问卷，解开谜一样的王强] https://mp.weixin.qq.com/s?__biz=MzUyMzI5Njc1MQ==&mid=2247483789&idx=1&sn=104055a020bf7db3bf07ff24a81d30b8&chksm=fa3f8b0dcd48021bb250b2d0154de9a8f28afc6980d09b746b2056563a8bc0f9f93a1c766669&mpshare=1&srcid=04045sC7Q4Opayq7hH5d9JVU&sharer_sharetime=1649072429913&sharer_shareid=a697a75b41763c317bec849da7e5a35a&scene=21#wechat_redirect
+
+    - *08* **你最喜欢的旅行是哪一次？**
+
+      王强：最喜欢的旅行是我上次去巴黎。（在）巴黎本来他们请我去看网球决赛，纳达尔对阵德约科维奇，我不熟悉网球，他们觉得非常难得，给了我一张票，我去了坐在第一排，但是我看完三个小时就跑到了拉雪兹神父公墓，所以在巴黎我见了活人以后就见死人。那天下着毛毛细雨，墓园里除了看墓园的几乎就是我，我带着非常恐惧的心游走在那些魂灵之间。但是看完肖邦、巴尔扎克、奥克卡·王尔德、拉封丹、莫里哀都在那的时候，我忽然觉得什么叫做生不如死，真正的生原来是死而不是生。让我想到当年读臧克家那首纪念鲁迅的诗：“有的人活着他已经死了，有的人死了他还活着。”当年我并不知道为什么？等到在墓园里面我恍然觉得，如果一生死亡是我们每个人不可避免的终结，就让你活着的时候做一次精彩的淋漓尽致的潇洒的发挥，不要考虑那么多。
+
+
+
+数字鸿沟之后，AI鸿沟即将到来？真格基金联合创始人、新东方教育科技集团联合创始人王强在《牛津全球书籍史》新书首发式上谈到读书的必要性，他说：“AI时代，若想得到正确答案，必须学会提问题，这比以往要求一个人对阅读、理解、想象要更深刻，只有具备问问题的能力，才能让AI成为你的助手。”
+
+ #好书推荐 #牛津全球书籍史（插图本） #史睿 #王强 #李学军 #人工智能时代 #当代大学生现状 #北京大学 #历史 #阅读
+
+
+
+AI时代，最有价值的是深度，而不是广度。真格基金联合创始人、新东方教育科技集团联合创始人王强在《牛津全球书籍史》新书首发式上谈到面对AI的发展，人首先要放松，不要背太多的精神包袱，而后要积极地学习、深入地思考。
+
+#好书推荐 #牛津全球书籍史（插图本） #史睿 #王强 #李学军 #人工智能时代 #当代大学生现状 #北京大学 #历史 #阅读 #deepseek
+
+
+
+[杜尚：我一生一点遗憾也没有，真的没有]
+https://www.sohu.com/a/125100536_488615
+
+1954 年，杜尚加入美国籍。这位先行者在晚年说：“我有幸在很早的时候就意识到，人不应以太多的重压拖累他的生命，诸如忙碌的工作、妻子、度假屋、轿车等等。所以我有很长一段时间都是单身汉，容许我不需要面对普遍的生活困难。所以我认为自己是一个快乐的人。我从来没有患过重病，也没有忧郁症或神经衰弱等。还有，我从来没有奋力制作，或急切地需要去表达自己，我从来没有那种需要——早上、下午、晚上，日以继夜不停地画的需要。我一生一点遗憾也没有，没有，真的没有，我晚年的运气甚至比早年还好。”
+
+
+
+最好的活法就是完全的放松，坦然的独处。尽情的享受生活，不在意别人对你的任何评价，不纠结命运让你处于怎样的境遇里。顺其自然，随遇而安，自得其乐，一生无悔。千万记住过劳则死，过慧则天收。困了就睡，饿了就吃，没苦就别自找苦吃，能吃苦，不是说人品就高尚，享受生活也不代表是浪费时间，脑子灵不灵活没关系。手里有没有钱也无所谓。人从出生到离开这个世界，这一路的经历是用来感受的，不是用来向别人证明自己。——蔡志忠老师
 
 
 
@@ -14823,7 +14894,7 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 
 logging  
 
-202601262018 创作者YJH 完成终极版
+202601262242 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
