--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -14828,17 +14828,19 @@ PS：有些人注定会再次相见，或在现实世界里，或在梦里，或
 何时了结的迷惘
 
 人生的旅程，在时间之流中转折推进，有开始就有结束。问题是，什么时候放开了结，才是最恰当而适切？
+
 人间事多的是轰轰烈烈的开展，能干干净净收场的，却少之又少。以是之故，讣闻上的“寿终正寝”，也成了赞颂之辞了。
 
 ……
 
 老师逼问学生，父母教训子女，总要有个限度，否则，说教责善不成，反带来反效果。夫妇论是非，男女谈恋爱，总要适可而止，不伤感情，若求全之心太过，没有为对方留下余地，那就挽回无计了。
+
 红颜总成白头，青春年少不再，人间还有什么放不开的？终其极，不都是黄土一抔么？那时候，什么不都放下来了。青春、爱情、权势，生未带来，死难带去，何苦恶形恶状，痴痴迷迷呢？在成长过程中，我们要学习如何去面对与承受一切来自生命的损伤与失落。
 
 即以戒烟而论，太多的人已不知自己到底戒几百次了。此虽戏言，不也透露某些讯息么？青少年不必用心，在偶然机遇里就可以学会抽烟；而断然戒绝，就是成年人也斩绝难断。打牌散心，说是卫生麻将，养兰怡情，说是田园乐事；然而打牌人迷，散心不成，就不太卫生了；养兰成痴，怡情不得，就非乐事一桩了。在人间热衷名利，远走田园又喜好花鸟，一样执着，哪能无牵无挂？
-演连续剧演得下不了台，挨到大家都厌弃不观，才草草收场；该告老而不告老，该息影而不息影，甚至退而不休，息影再复出，把原有的形象破坏了，残留在观众身上的
 
-好感敬意，也就荡然无存。该分手而不分手，该道别而不道别，到最后彼此不能说话，可真是余味已尽，相见也难了。
+演连续剧演得下不了台，挨到大家都厌弃不观，才草草收场；该告老而不告老，该息影而不息影，甚至退而不休，息影再复出，把原有的形象破坏了，残留在观众身上的好感敬意，也就荡然无存。该分手而不分手，该道别而不道别，到最后彼此不能说话，可真是余味已尽，相见也难了。
+
 人生的旅程，在时间之流中，来去匆匆，有开始总有结束，还有什么好痴迷强求的？什么事都可有可无，什么人都好聚好散，人生成败的论定，不在于何时投人，而在于何时退出。懂得急流勇退，永远是人生最重大的智慧。
 
 
