--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -14884,6 +14884,106 @@ https://www.sohu.com/a/125100536_488615
 
 
 
+482、失恋之所以让人痛苦，不仅因为感情的结束，更因为那份深深的“欲求而不得”。我们曾希望对方爱我们，希望故事延续，却最终被现实打断。失败的感觉，并非来自失去对方，而是来自心中那个无法抵达的理想结果。我们痛苦的，其实是“欲望的落空”，而非爱情的终止。
+
+
+
+483、在我们的人生旅程中，所谓“失败感”往往并不来自结果本身，而是来自期待与现实之间的张力。年轻时，我们渴望被某人喜欢；工作后，我们希望被理想的公司接纳；为人父母后，又寄望孩子实现某种目标。当这些期望未能兑现，我们便感到挫败。归根结底，这是一种“欲望未被满足”的体验。相反，当愿望得以实现，我们便称之为“成功”。
+
+因此，成功与失败并非外界标签，而是“欲望能否抵达现实”的差距。认识到这一点，我们才能更平静地看待那些所谓的“未达成”，并理解：有些欲望，本就不是必须实现的。
+
+
+
+484、- [中国式相亲 別在该谈梦想的年纪去相亲] https://mp.weixin.qq.com/s/My3AA2oYlTseMcmJ_KUEiA?scene=1&click_id=25
+
+先成家，后立业这个说法，好像早就不怎么适合这个时代了。
+
+过去靠男人的收入养家，女人打理好家里的一切就好了。
+
+现在不同了，男人女人都可以或者，都应该追求自己的理想和事业。你向着梦想坚定的走过去，你就会遇到与你匹配，且志同道合的人。
+
+你安于现状，哪怕遇到了你觉得最投缘的那个人，可你用什么匹配呢？
+
+23岁，本来就应该是为梦想好好打拼的年纪。
+
+相亲，什么的，就先放一放吧。
+
+因为那个命中注定的人还在等，等你成长到足够强大，等你能吸引她/他和你并肩前行的那一天。
+
+
+
+485、宗萨仁波切说：
+“如果我们喜欢一个人，就会投射出一种幻相，认为他是好人，后来他做了一些事，威胁到我们，我们对他的幻相变成了坏人的幻相，于是我们十分生气。我们虽然只感受到自己对他的幻相，从来没有真正见到他，却经历了一切情绪。镜中影：我们终其一生，都在和自己的幻相周旋。檐角风铃轻颤，不是风扰了心，是心把风认成了执念。
+我们看人间的人，总像对着蒙尘的铜镜——你想看见温柔，便把他的沉默滤成稳重；你想看见疏离，又把他的从容曲解成冷淡。
+宗萨仁波切道破的，原是这世间最隐蔽的困局：我们从未真正“见”过谁，只抱着自己织的幻相，哭了又笑，怒了又伤。初见时的欢喜，从来不是因他本身，是我们给“他”披了件自己绣的衣。你喜静，便觉他久坐看书的侧影是禅；你贪暖，便把他递热水的动作当救赎。那些被我们夸“好”的细节，不过是心的投射——他本是寻常人，会忘事、会烦躁、会有你不懂的沉默，可我们偏要把他钉在“完美”的框里。就像有人爱梅，只赞它雪落枝头的清绝，却厌它谢时的狼藉。其实梅从未变，变的是看梅人的心：欢喜时，连落瓣都算“留白”；厌弃时，连疏影都成“碍眼”。
+我们觉得他人好，从来不是他的底色，是我们想借他圆自己对美好的想象。幻破：情绪是执念的崩塌，后来他变了—不是他真的变了，是他脱了那件我们缝的衣。你以为他永远温和，可他也会因急事皱眉；你以为他永远在意，可他也会因疲惫忘了你的叮嘱。这些不合预期的瞬间，像针戳破了气球，我们的愤怒、委屈，从来不是怨他，是怨自己的幻相塌我们的情绪风暴，本质是“失控的执念”：我认定你该是怎样，你偏不是，于是我恼的不是你，是那个“掌控不了幻相”的自己。那些歇斯底里的瞬间，不过是在和自己织的梦较劲。
+放下投射，方得轻安：真正的清醒，从承认他只是他开始。不是不再喜欢，是不再把喜欢变成“绑架”——他可以温和，也可以急躁；可以在意，也可以偶尔疏忽。就像山月，既有圆满时的清辉，也有残缺时的朦胧，你接受它的所有样子，便不会因月缺而叹“失了圆满”。
+有禅者说“见山是山”，初时见山是“我想的山”，后来见山是“山本身”。放下对他人的投射，不是冷漠，是松绑——松绑他人不必活成我们的期待，也松绑自己不必困在幻相里。当你不再把自己的影叠在他身上，便会发现：他还是那个寻常人，可你看他时，心不再慌了，风再吹，铃再响，也只当是风过铃动，再无多余执念。
+
+
+
+486、你厌恶别人的傲慢，其实是在厌恶卑微的自己。你憎恨别人的压制，其实是在憎恨软弱的自己。你害怕别人的疏远，其实是在害怕被抛弃的自己。所有人的出现都是配合你完成一场人生的戏，让你认识你自己！
+
+——宗萨仁波切
+
+
+
+487、- [一勾残月向西流，对此不抛眼泪也无由——《毛主席诗词全集》阅读札记(上)] https://mp.weixin.qq.com/s/vC_tVK_b4ns8K7b1ZdnG9g
+
+多年以前，我看树下野狐的小说《搜神记》，里面有一首《刹那芳华曲》：“朝露昙花，咫尺天涯，人道是黄河十曲，毕竟东流去。八千年玉老，一夜枯荣，问苍天此生何必？昨夜风吹处，落英听谁细数。九万里苍穹，御风弄影，谁人与共？千秋北斗，瑶宫寒苦，不若神仙眷侣，百年江湖。”
+我觉得除了最后一句，里面都是毛主席与杨开慧的故事。
+
+
+
+488、- [如何认识自己？（如何找到想做的事）书评] https://book.douban.com/review/16330842/
+
+《如何找到想做的事 世界上最简单的人生定位法——走出迷茫的自我认知指南》([日] 八木仁平 著  徐艺菊 译) 
+
+
+
+找到自己最喜欢的人，找到自己最喜欢的事——在当今世界，这是一个人一辈子的追寻。
+
+
+
+489、“竹密不妨流水过，山高岂碍白云飞”
+人生海海，山山而川。纵使生活关卡重重，胸有山河万里长，无惧迷雾，何畏荆棘。这人间盛大，终有你的山海星辰。
+
+
+
+“有缘即住无缘去，一任清风送白云”
+努力但不强求，追求但不执着。来去随缘，不惧不忧，愿你活出如云如水般的柔软与自由。
+
+
+
+“来时无迹去无踪，去与来时事一同” 
+不必背负太多，带着真诚与勇敢，去爱，去体验，去感受。心似秋月澄明，身如山风自在。愿你在人生的路途上，活成本真，活出慈悲。
+
+
+
+489、黄执中拆解爱情迷思
+
+其实很多人根本不懂爱情。可能是因为年纪的关系，我发觉有很多我在年轻时会讲的话，那种斩钉截铁、热血沸腾的话，年过40以后，基本上对他的评价就会不太一样。今天我听到很多年轻人充满冲动的话，在现场是会得到掌声的时候，我就觉得等一下如果有机会点评，我一定要稍微做一点科普。
+
+第一个是我在场上的时候，有一段我听到的叫做"单身不代表没有爱情，虽然我是单身，可是我内心由衷地爱对方，为了对方一辈子不找对象，一辈子单身，这也是真爱"。我看到后面有些同学就开始鼓掌了，真的是年轻啊。
+
+我跟大家稍微科普一件事情，这个无关胜败，讲给眼前的观众跟未来可能会为这个点鼓掌的观众。也不是说讲的点不对，我只是说因为这是比赛。那当然不是爱情。
+
+我跟各位讲，刚刚你说什么"我这个为了喜欢对方对不对，一辈子我要为他单身"，这玩意叫自恋，懂吗？叫自我感动，懂吗？从某种角度来说，你爱的其实不是他，你爱的是爱上他的那个你自己。我不知道你们听得懂听不懂，叫做"我真是伟大，我为了你牺牲了这么多，我为了你一辈子不娶，为了你一辈子不嫁，我为了你一辈子没找过别的人，我这种牺牲这种崇高，这种真诚，这种奉献，我好棒"，你这是自恋。
+
+这世界上有一种东西叫做"没有任何受益者的牺牲"。比如说你生病了大哥，我为你担心的要死，没有任何受益者。大哥平白欠了我情，那我为他担心的要死这件事情对他有什么帮助呢？对不对？我只是满足了我自己。
+
+所以很多年轻人打电话跟爸妈讲电话的时候喜欢报喜不报忧，因为老人家有一个坏毛病叫做"你跟他讲了坏事以后他就跟你讲：你昨天那件事，我跟你爸一个晚上睡不着，你爸吃也吃不下，你妈这个这个这两三天已经没上厕所了，对不对，都急便秘了"。真的，我问你"你妈三天不上厕所急便秘了"，对我这个问题有任何帮助吗？没有，可是爸妈觉得他为你付出很多，他觉得"我真是一个尽责的、认真的父母，对不对？听到了小孩子的难处，连睡都睡不着"。
+
+不要养成这种习惯，懂吗？要付出就要有受益者，凡是没有受益者的付出，那感动的都是自己。亲情如此，友情如此，爱情亦如此。
+
+
+
+490、爱恨之外，更有辽阔天地。
+
+人生辽阔，不要只活在爱恨里面。
+
+
+
 终
 
 
@@ -14902,7 +15002,7 @@ https://www.sohu.com/a/125100536_488615
 
 logging  
 
-202601271842 创作者YJH 完成终极版
+202601301842 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
